--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Notes App</title>
   </head>
   <body>
     <h1>Notes App</h1>
     <h2>Take Notes and never forget</h2>
-    <p></p>
+    <p>This application was created by Alyssa</p>
+    <p>Some note text</p>
+    <script src="notes-app.js"></script>
   </body>
 </html>
