add: practice with event listener notes-app

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -11,6 +11,10 @@
     <h2>Take Notes and never forget</h2>
     <p>This application was created by Alyssa</p>
     <p>Some note text</p>
+    <form>
+      <input class="note" placeholder="Write note here" required />
+      <button class="note-submit" type="submit">Create note</button>
+    </form>
     <script src="notes-app.js"></script>
   </body>
 </html>
