add: create to-do button in todo-app2

--- a/todo-app2/index.html
+++ b/todo-app2/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>To-do's:</h1>
+    <button id="create-to-do">Add To-Do</button>
     <script src="script.js"></script>
   </body>
 </html>
