add: event type input modifications

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -12,7 +12,7 @@
     <p class="note">This application was created by Alyssa</p>
     <p class="note">Some note text</p>
     <form>
-      <input class="new-note" placeholder="Write note here" required />
+      <input id="note-input" placeholder="Write note here" required />
       <button class="note-submit" type="submit">Create note</button>
     </form>
     <button id="remove-button">Remove all notes</button>
