style: minor mods to todo-app2

--- a/todo-app2/index.html
+++ b/todo-app2/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To-do App2: Adding elements to DOM</title>
+    <title>To-do App2</title>
   </head>
   <body>
     <h1>To-do's:</h1>
-    <button id="create-to-do">Add To-Do</button>
+    <form>
+      <input
+        id="create-to-do"
+        type="text"
+        placeholder="Type To-Do task"
+        required
+      />
+      <button id="to-do-button">Add To-Do</button>
+    </form>
     <script src="script.js"></script>
   </body>
 </html>
