--- a/notes-app3/index.html
+++ b/notes-app3/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Notes App2</title>
+    <title>Notes App 3</title>
   </head>
   <body>
-    <h1>Notes App</h1>
-    <p class="note">Some note text</p>
+    <h1>Notes App 3</h1>
     <form>
       <input id="note-input" placeholder="Write note here" required />
       <button class="note-submit" type="submit">Create note</button>
+    </form>
+    <form>
+      <p>
+        Search notes:
+        <input
+          id="filter-notes"
+          type="text"
+          placeholder="Type text to search"
+        />
+      </p>
     </form>
     <button id="remove-button">Remove all notes</button>
     <script src="script.js"></script>
