--- a/notes-app3/index.html
+++ b/notes-app3/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <h1>Notes App 3</h1>
-    <form>
+    <!--Create Note Feature to add next, hidden for now-->
+    <form style="display: none">
       <input id="note-input" placeholder="Write note here" required />
       <button class="note-submit" type="submit">Create note</button>
     </form>
