--- a/notes-app4/index.html
+++ b/notes-app4/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Notes App 3</title>
+    <title>Notes App 4</title>
   </head>
   <body>
-    <h1>Notes App 3</h1>
+    <h1>Notes App 4</h1>
     <!--Create Note Feature to add next, hidden for now-->
     <form style="display: none">
       <input id="note-input" placeholder="Write note here" required />
@@ -24,6 +24,7 @@
       </p>
     </form>
     <button id="remove-button">Remove all notes</button>
+    <section id="all-notes"></section>
     <script src="script.js"></script>
   </body>
 </html>
