--- a/notes-app4/index.html
+++ b/notes-app4/index.html
@@ -8,22 +8,31 @@
   </head>
   <body>
     <h1>Notes App 4</h1>
-    <!--Create Note Feature to add next, hidden for now-->
-    <form style="display: none">
-      <input id="note-input" placeholder="Write note here" required />
-      <button class="note-submit" type="submit">Create note</button>
+    <form id="create-note-form">
+      <input
+        type="text"
+        placeholder="Title of note"
+        name="title"
+        required
+      />
+      <input
+      type="text"
+      placeholder="Write note here"
+      name="body"
+      required
+    />
+      <button type="submit">Create note</button>
     </form>
-    <form>
-      <p>
+    <form id="search-form">
+      <label>
         Search notes:
         <input
-          id="filter-notes"
           type="text"
           placeholder="Type text to search"
+          name="textSearch"
         />
-      </p>
+      </label>
     </form>
-    <button id="remove-button">Remove all notes</button>
     <section id="all-notes"></section>
     <script src="script.js"></script>
   </body>
