add: hide completed instead of completed/not completed toggles

--- a/todo-app4/index.html
+++ b/todo-app4/index.html
@@ -24,23 +24,16 @@
         > -->
     <label
       ><input
-        id="completed"
+        id="hide-completed"
         type="checkbox"
         name="task-completion"
         value="completed"
-        checked
       />Hide completed</label
     >
     <section id="all-todos"></section>
     <form id="new-to-do-form">
-      <input
-        id="create-to-do"
-        type="text"
-        placeholder="Enter task"
-        name="newToDo"
-        required
-      />
-      <button id="submit-new-to-do">Add To-Do</button>
+      <input type="text" placeholder="Enter task" name="newToDo" required />
+      <button>Submit</button>
     </form>
     <script src="script.js"></script>
   </body>
