--- a/todo-app4/index.html
+++ b/todo-app4/index.html
@@ -21,6 +21,9 @@
         value="completed"
       />Hide completed</label
     >
+    <section id="todo-left">
+      <h4 id="heading-todo-left"></h4>
+    </section>
     <section id="all-todos"></section>
     <form id="new-to-do-form">
       <input type="text" placeholder="Enter task" name="newToDo" required />
