add: two examples in script of optimizing filtering

--- a/todo-app6/index.html
+++ b/todo-app6/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>To-do App5</title>
+    <title>To-do App6</title>
   </head>
   <body>
     <h1>To-do's:</h1>
@@ -21,8 +21,7 @@
         value="completed"
       />Hide completed</label
     >
-    <section id="todo-left">
-    </section>
+    <section id="todo-left"></section>
     <section id="all-todos"></section>
     <form id="new-to-do-form">
       <input type="text" placeholder="Enter task" name="newToDo" required />
