--- a/notes-app4/index.html
+++ b/notes-app4/index.html
@@ -8,16 +8,19 @@
   </head>
   <body>
     <h1>Notes App 4</h1>
-    <form id="search-form">
       <label>
         Search notes:
-        <input
+        <input id="searchform"
           type="text"
           placeholder="Type text to search"
           name="textSearch"
         />
       </label>
-    </form>
+    <select id="sort-dropdown">
+      <option value="byEdited">Sort by last edited</option>
+      <option value="byRecent">Sort by recently created</option>
+      <option value="byAlphabetical">Sort alphabetically</option>
+    </select>
     <section id="all-notes"></section>
     <form id="create-note-form">
       <input type="text" placeholder="Title of note" name="title" required />
