--- a/notes-app4/index.html
+++ b/notes-app4/index.html
@@ -8,14 +8,15 @@
   </head>
   <body>
     <h1>Notes App 4</h1>
-      <label>
-        Search notes:
-        <input id="searchform"
-          type="text"
-          placeholder="Type text to search"
-          name="textSearch"
-        />
-      </label>
+    <label>
+      Search notes:
+      <input
+        id="search-form"
+        type="text"
+        placeholder="Type text to search"
+        name="textSearch"
+      />
+    </label>
     <select id="sort-dropdown">
       <option value="byEdited">Sort by last edited</option>
       <option value="byRecent">Sort by recently created</option>
@@ -25,7 +26,7 @@
     <form id="create-note-form">
       <input type="text" placeholder="Title of note" name="title" required />
       <input type="text" placeholder="Write note here" name="body" required />
-      <button type="submit">Create note</button>
+      <button>Submit</button>
     </form>
     <script src="script.js"></script>
   </body>
