add: notes-app5: local storage

--- a/notes-app5/index.html
+++ b/notes-app5/index.html
@@ -11,7 +11,7 @@
     <label>
       Search notes:
       <input
-        id="searchform"
+        id="search-form"
         type="text"
         placeholder="Type text to search"
         name="textSearch"
