style: rename remove todos to clearSection

--- a/todo-app8/index.html
+++ b/todo-app8/index.html
@@ -27,6 +27,7 @@
       <input type="text" placeholder="Enter task" name="newToDo" required />
       <button>Submit</button>
     </form>
+    <script src="todo-functions.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
