--- a/todo-app8/index.html
+++ b/todo-app8/index.html
@@ -25,7 +25,7 @@
     <section id="all-todos"></section>
     <form id="new-to-do-form">
       <input type="text" placeholder="Enter task" name="newToDo" required />
-      <button>Submit</button>
+      <button type="submit">Submit</button>
     </form>
     <script src="todo-functions.js"></script>
     <script src="script.js"></script>
