feat: checkbox and X button added

--- a/todo-app9/index.html
+++ b/todo-app9/index.html
@@ -21,7 +21,10 @@
         value="completed"
       />Hide completed</label
     >
-    <section id="all-todos"></section>
+    <h2 id="summary"></h2>
+    <section id="all-todos">
+      <ul id="todo-list"></ul>
+    </section>
     <form id="new-to-do-form">
       <input type="text" placeholder="Enter task" name="newToDo" required />
       <button type="submit">Submit</button>
