add: uuid library to todos

--- a/todo-app9/index.html
+++ b/todo-app9/index.html
@@ -29,7 +29,7 @@
       <input type="text" placeholder="Enter task" name="newToDo" required />
       <button type="submit">Submit</button>
     </form>
-    <script src="https://gist.githubusercontent.com/andrewjmead/d64087c46129fc58df67c361cb01e889/raw/0a5225ee0e4382059ba7e439a882ece94a6e27f4/uuidv4.js"></script>
+    <script src="uuidv4.js"></script>
     <script src="todo-functions.js"></script>
     <script src="script.js"></script>
   </body>
