--- a/todo-app9/index.html
+++ b/todo-app9/index.html
@@ -25,8 +25,8 @@
     <section id="all-todos">
       <ul id="todo-list"></ul>
     </section>
-    <form id="new-to-do-form">
-      <input type="text" placeholder="Enter task" name="newToDo" required />
+    <form id="new-todo-form">
+      <input type="text" placeholder="Enter task" name="newTodo" required />
       <button type="submit">Submit</button>
     </form>
     <script src="uuidv4.js"></script>
