--- a/notes-app7/index.html
+++ b/notes-app7/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Notes App 6: Local Storage</title>
+    <title>Notes App 7: Edit Page</title>
   </head>
   <body>
-    <h1>Notes App 6</h1>
+    <h1>Notes App 7</h1>
     <label>
       Search notes:
       <input
