add: script for editing page

--- a/notes-app7/edit.html
+++ b/notes-app7/edit.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <h1>Editing Page</h1>
+    <script src="note-functions.js"></script>
+    <script src="script-edit.js"></script>
   </body>
 </html>
