--- a/notes-app7/edit.html
+++ b/notes-app7/edit.html
@@ -7,7 +7,20 @@
     <title>Note Editing</title>
   </head>
   <body>
-    <h1>Editing Page</h1>
+    <h1>Edit Note</h1>
+    <p><a href="index.html">Back to Home</a></p>
+    <input
+      id="note-title"
+      type="text"
+      placeholder="Title of note"
+      name="title"
+    />
+    <textarea
+      id="note-body"
+      placeholder="Write note here"
+      name="body"
+    ></textarea>
+    <button id="remove-note">Remove Note</button>
     <script src="note-functions.js"></script>
     <script src="script-edit.js"></script>
   </body>
