--- a/notes-app7/index.html
+++ b/notes-app7/index.html
@@ -25,8 +25,8 @@
     </select>
     <section id="all-notes"></section>
     <form id="create-note-form">
-      <input type="text" placeholder="Title of note" name="title" required />
-      <input type="text" placeholder="Write note here" name="body" required />
+      <!-- <input type="text" placeholder="Title of note" name="title" required />
+      <input type="text" placeholder="Write note here" name="body" required /> -->
       <button type="submit">Create note</button>
     </form>
     <script src="uuidv4.js"></script>
