add: moment library

--- a/notes-app8/index.html
+++ b/notes-app8/index.html
@@ -28,6 +28,7 @@
       <button type="submit">Create note</button>
     </form>
     <script src="uuidv4.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
     <script src="note-functions.js"></script>
     <script src="script.js"></script>
   </body>
