--- a/notes-app8/edit.html
+++ b/notes-app8/edit.html
@@ -21,6 +21,7 @@
       name="body"
     ></textarea>
     <button id="remove-note">Remove Note</button>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
     <script src="note-functions.js"></script>
     <script src="script-edit.js"></script>
   </body>
