--- a/notes-app9/index.html
+++ b/notes-app9/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script type="module" src="./utils.js">
+      import * as Utils from "./utils";
+    </script>
+    <script type="module" src="./script.js">
+      import * as Script from "./script.js";
+    </script>
     <title>Notes App 9</title>
   </head>
   <body>
@@ -29,7 +35,5 @@
     </form>
     <script src="uuidv4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
-    <script src="note-functions.js"></script>
-    <script src="script.js"></script>
   </body>
 </html>
