--- a/notes-app9/index.html
+++ b/notes-app9/index.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="./utils.js">
-      import * as Utils from "./utils";
-    </script>
-    <script type="module" src="./script.js">
-      import * as Script from "./script.js";
-    </script>
+    <script defer type="module" src="script.js"></script>
     <title>Notes App 9</title>
   </head>
   <body>
