fix: remove note listener with input/output

--- a/notes-app9/edit.html
+++ b/notes-app9/edit.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="script-edit.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"
+    ></script>
+    <script defer type="module" src="script-edit.js"></script>
     <title>Note Editing</title>
   </head>
   <body>
@@ -23,8 +27,5 @@
       name="body"
     ></textarea>
     <button id="remove-note">Remove Note</button>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
-    <!-- <script src="./utils.js"></script>
-    <script src="script-edit.js"></script> -->
   </body>
 </html>
