add: npm and sass

--- a/to-do/todo-app11/index.html
+++ b/to-do/todo-app11/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>To-do App10</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <script defer src="uuidv4.js"></script>
+    <script defer src="utils.js"></script>
+    <script defer src="script.js"></script>
+    <title>To-do App</title>
   </head>
   <body>
     <h1>To-do's:</h1>
@@ -29,8 +32,5 @@
       <input type="text" placeholder="Enter task" name="newTodo" required />
       <button type="submit">Submit</button>
     </form>
-    <script src="uuidv4.js"></script>
-    <script src="todo-functions.js"></script>
-    <script src="script.js"></script>
   </body>
 </html>
