add: background pic with gradient

--- a/to-do/todo-app11/index.html
+++ b/to-do/todo-app11/index.html
@@ -11,6 +11,7 @@
     <title>To-do App</title>
   </head>
   <body>
+    <main class="main">
     <h1>To-do's:</h1>
     <label
       >Search To-Do Items:
@@ -32,5 +33,6 @@
       <input type="text" placeholder="Enter task" name="newTodo" required />
       <button type="submit">Submit</button>
     </form>
+    </main>
   </body>
 </html>
