style: format main content with hazy white background

--- a/to-do/todo-app11/index.html
+++ b/to-do/todo-app11/index.html
@@ -10,11 +10,11 @@
     <script defer src="script.js"></script>
     <title>To-do App</title>
   </head>
-  <body>
+  <body class="body">
+    <header class="header">
+      <h1 class="heading">To-do's:</h1>
+    </header>
     <main class="main">
-      <header class="header">
-        <h1 class="heading">To-do's:</h1>
-      </header>
       <section class="search">
         <label
           >Search To-Do Items:
