style: todo list items

--- a/to-do/todo-app11/index.html
+++ b/to-do/todo-app11/index.html
@@ -16,7 +16,7 @@
     </header>
     <main class="main">
       <section class="search pad-vert">
-        <label class="pad-vert side-mar"
+        <label class="label pad-vert side-mar"
           >Search:
           <input
             id="search-input"
@@ -25,7 +25,7 @@
             placeholder="Type text to search"
           />
         </label>
-        <label class="pad-vert"
+        <label class="label pad-vert"
           ><input
             id="hide-completed"
             class="side-mar"
@@ -36,12 +36,12 @@
         >
       </section>
       <h2 id="summary"></h2>
-      <section id="all-todos">
-        <ul id="todo-list"></ul>
+      <section id="all-todos" class="side-mar">
+        <ul id="todo-list" class="side-mar"></ul>
       </section>
       <form id="new-todo-form">
         <input
-          class="pad-input"
+          class="pad-input side-mar"
           type="text"
           placeholder="Enter task"
           name="newTodo"
